--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
         </div>
 
         <div class="instructions">
-            <h3>How to use the Branding Pack:</h3>
+            <h3>(Optional) How to use the Branding Pack:</h3>
             <ol>
-                <li>(Optional) Download the <b>Branding Pack</b> ZIP.</li>
+                <li>Download the <b>Branding Pack</b> ZIP.</li>
                 <li>Drop it into your <code>resourcepacks</code> folder.</li>
                 <li>Enable it in-game for the custom Hydrogen UI.</li>
             </ol>
@@ -138,4 +138,5 @@
 
 </body>
 </html>
+
 
